--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 body {
   width: 600px;
   margin: 50px auto;
+  background-color:#f3eff1;
 }
 
 .color-palette {
@@ -18,6 +19,13 @@ body {
   background-color: grey;
   margin: 0 auto 2rem;
   border: 2px solid black;
+}
+
+.mix-app {
+  background-color:#f3eff1;
+  border-radius: 27px;
+  box-shadow:  26px 26px 53px #b4b1b2, 
+             -26px -26px 53px #ffffff;
 }
 
 .label {
@@ -33,11 +41,15 @@ body {
 }
 
 .btn-plus {
-  background-image: url('img/plus.png');
+  background-image: url('img/plus-solid.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .btn-minus {
-  background-image: url('img/minus.png');
+  background-image: url('img/minus-solid.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .progress {
@@ -48,15 +60,18 @@ body {
 
 .bar {
   flex: 1;
-  height: 64px;
+  height: 48px;
   margin: 0 8px;
   background-color: rgb(212, 212, 212);
+  border-radius: 50px;
 }
 
 .knob {
   width: 40%;
-  height: 64px;
+  height: 48px;
   background-color: rgb(255, 82, 0);
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
 }
 
 .color-mix {
